Bug#119198 fix bug optimizer reverse index scan give incorrect result